cgd(4): Wait for worker threads to complete before destroying mutex.

Fixes PR kern/56546 (probably!).